<resources>
    <string name="app_name">Training</string>

    <string name="action_settings">Settings</string>

    <string name="login_label">Login</string>
    <string name="login_user">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_login">Log In</string>
    <string name="login_signup">Sign up</string>
    <string name="login_terms"><u>By joining you agree to our <![CDATA[<a href="http://www.wolox.com.ar">Terms &amp; Conditions</a>]]></u></string>
    <string name="login_emptyuser">Username cannot be empty</string>
    <string name="login_emptypass">Password cannot be empty</string>
    <string name="login_invaliduser">Invalid username</string>
    <string name="login_wronguser">Wrong username</string>
    <string name="login_wrongpass">Wrong password</string>
    <string name="login_invaliduserpass">Invalid username or password</string>
    <string name="login_invalidtoken">Invalid session</string>
    <string name="login_error">Something went wrong</string>

    <string name="signup_label">Sign up</string>
    <string name="signup_user">Email</string>
    <string name="signup_pass">Password</string>
    <string name="signup_cpass">Confirm password</string>
    <string name="signup_emptyuser">Email cannot be empty</string>
    <string name="signup_emptypass">Password cannot be empty</string>
    <string name="signup_cpassnotmatch">Passwords not match</string>
    <string name="signup_userexists">That email exists</string>
    <string name="signup_invaliduser">Invalid email</string>
    <string name="signup_join">Join</string>
    <string name="signup_terms"><u>By joining you agree to our <![CDATA[<a href="http://www.wolox.com.ar">Terms &amp; Conditions</a>]]></u></string>
    <string name="signup_successful">Signup was successful</string>
    <string name="signup_usernametaken">This email is already taken</string>
    <string name="signup_error">Something went wrong</string>

    <string name="news_empty">No news</string>
    <string name="mininew_title_default">Title</string>
    <string name="mininew_descr_default">Description</string>

    <string name="wolox_title">Wolox</string>

    <string-array name="board_tabs">
        <item>NEWS</item>
        <item>PROFILE</item>
    </string-array>

    <string name="profile_default_loc">Milano, Italy</string>
    <string name="profile_default_name">Mario Trusso</string>
    <string name="profile_default_description">Kun tarkoittaa vei suomuakaan voitaisiin. Lapsilla porhalsi en kymmenta kyllahan kuolleen myrskysi on. Laiva joulu sekin etten pilan ei on. Tuhattakin ai suurtakaan ei se semmoiseen tarkastaen. Heruisi tai rumasti antakaa odottaa loi puhisee tupansa vai. Vietavaksi hartaimman ela voi lintukarit han. Tieda jotta vatsa eli yha asian osaan luvan.</string>

    <string name="newsdetail_toolbar">Post</string>
    <string name="newsdetail_name_default">Ali Connors</string>
    <string name="newsdetail_descr_default">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. </string>
    <string name="newsdetail_time_default">15m</string>

    <string name="create_hint_title">Title</string>
    <string name="create_hint_description">Add a description</string>
    <string name="create_addimage">+ Image</string>
    <string name="create_title_empty">Title cannot be empty</string>
    <string name="create_title_length">Title exceeds maximum (60 characters)</string>
    <string name="create_description_empty">Description cannot be empty</string>
    <string name="create_description_length">Description exceeds maximum (250 characters)</string>
    <string name="create_saved">Saved</string>
</resources>
