<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_createnews"
        layout="@layout/toolbar_createnews"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="25dp">

    <TextView
        android:id="@+id/iv_create"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/verylightgray"
        android:text="@string/create_addimage"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_create"
        android:layout_marginTop="10dp"
        android:hint="@string/create_hint_title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_create_title"
        android:layout_marginTop="10dp"
        android:hint="@string/create_hint_description" />

</RelativeLayout>

</LinearLayout>