<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/iv_profile_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/cover"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_profile_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/avatar"
            app:border_width="0dp"
            app:border_color="#FF000000" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profile_default_name"
            android:textStyle="bold"
            android:textColor="@color/bluewolox" />

        <ImageView
            android:id="@+id/iv_profile_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tv_profile_name"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/tv_profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_name"
            android:layout_marginLeft="100dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/profile_default_loc" />

        <TextView
            android:id="@+id/tv_profile_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/profile_default_description" />

        <Button
            android:id="@+id/button"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="35dp"
            android:drawableTop="@drawable/edit" />

    </RelativeLayout>

</RelativeLayout>