<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_newsdetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_profile_cover"
                        android:layout_width="match_parent"
                        android:layout_height="275dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/post"
                        android:scaleType="fitStart" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp" >

                        <TextView
                            android:id="@+id/tv_newsdetail_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newsdetail_name_default"
                            android:textColor="@color/bluewolox"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/tv_newsdetail_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_newsdetail_title"
                            android:layout_marginTop="10dp"
                            android:layout_centerHorizontal="true"
                            android:text="@string/newsdetail_descr_default" />

                        <TextView
                            android:id="@+id/tv_newsdetail_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/newsdetail_time_default" />

                        <ImageView
                            android:id="@+id/iv_newsdetail_like"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_below="@+id/tv_newsdetail_description"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:src="@drawable/like_off" />

                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar_news_detail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</RelativeLayout>